examples/failing/Arrays.purs
module Data.Array where

  import Prelude

  test = \arr -> arr !! (0 !! 0)
